// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Back-to-Back: tracker state update sequences > classic issue lifecycle state sequence 1`] = `
[
  "pending",
  "branch_created",
  "phase_running",
  "branch_created",
  "phase_waiting",
  "branch_created",
  "phase_running",
  "branch_created",
  "phase_running",
  "branch_created",
  "completed",
]
`;

exports[`Back-to-Back: tracker state update sequences > failure and retry state sequence 1`] = `
[
  "pending",
  "branch_created",
  "phase_running",
  "failed",
  "failedAt:phase_running",
  "branch_created",
  "attempts:1",
]
`;

exports[`Back-to-Back: tracker state update sequences > github API call sequence for failure path 1`] = `[]`;

exports[`Back-to-Back: tracker state update sequences > github API call sequence for label updates 1`] = `[]`;

exports[`Back-to-Back: tracker state update sequences > pipeline phase order does not carry lifecycle state mappings 1`] = `
[
  {
    "kind": "ai",
    "name": "plan",
  },
  {
    "kind": "gate",
    "name": "review",
  },
  {
    "kind": "ai",
    "name": "build",
  },
  {
    "kind": "ai",
    "name": "verify",
  },
]
`;
